syntax = "proto3";

package greet;

option java_package = "hr.smilebacksmile.greet";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimeResponse {
    string result = 1;
}

service GreetService {
    // Unary service
    rpc Greet(GreetRequest) returns(GreetResponse) {};

    // Server streaming service
    rpc GreetManyTimes(GreetRequest) returns(stream GreetManyTimeResponse) {};
}